--- a/RedEdr/RedEdr.vcxproj.filters
+++ b/RedEdr/RedEdr.vcxproj.filters
@@ -39,9 +39,6 @@
     <ClCompile Include="logreader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="loguru.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="dllinjector.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -66,6 +63,12 @@
     <ClCompile Include="serviceutils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\RedEdrShared\logging.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\RedEdrShared\loguru.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="etwreader.h">
@@ -87,9 +90,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="logreader.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="loguru.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="cxxops.hpp">
@@ -123,6 +123,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="serviceutils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\RedEdrShared\logging.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\RedEdrShared\loguru.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
