--- a/RedEdrTester/RedEdrTester.vcxproj.filters
+++ b/RedEdrTester/RedEdrTester.vcxproj.filters
@@ -30,9 +30,6 @@
     <ClCompile Include="..\RedEdr\logreader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\RedEdr\loguru.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\RedEdr\dllinjector.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -42,10 +39,19 @@
     <ClCompile Include="..\RedEdr\utils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\RedEdrShared\loguru.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\RedEdrShared\logging.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="uthash.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\RedEdrShared\loguru.hpp">
+      <Filter>Resource Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
