--- a/RedEdrShared/RedEdrShared.vcxproj.filters
+++ b/RedEdrShared/RedEdrShared.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="piping.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="etwconsumer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="logging.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="piping.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="etwconsumer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
