--- a/UnitTests/UnitTests.vcxproj
+++ b/UnitTests/UnitTests.vcxproj
@@ -159,9 +159,11 @@
     <ClCompile Include="..\RedEdrShared\logging.cpp" />
     <ClCompile Include="..\RedEdr\cache.cpp" />
     <ClCompile Include="..\RedEdr\config.cpp" />
+    <ClCompile Include="..\RedEdr\event_producer.cpp" />
     <ClCompile Include="..\RedEdr\output.cpp" />
     <ClCompile Include="..\RedEdr\procinfo.cpp" />
     <ClCompile Include="..\RedEdr\utils.cpp" />
+    <ClCompile Include="UnitTestAnalyzer.cpp" />
     <ClCompile Include="UnitTestCache.cpp" />
     <ClCompile Include="UnitTestOutput.cpp" />
     <ClCompile Include="UnitTests.cpp" />
