--- a/RedEdr/RedEdr.vcxproj.filters
+++ b/RedEdr/RedEdr.vcxproj.filters
@@ -153,4 +153,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="index.html">
+      <Filter>Source Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
