refactor: cleanup UnitTests

--- a/UnitTests/UnitTests.vcxproj
+++ b/UnitTests/UnitTests.vcxproj
@@ -157,11 +157,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\RedEdrShared\logging.cpp" />
-    <ClCompile Include="..\RedEdr\cache.cpp" />
+    <ClCompile Include="..\RedEdrShared\utils.cpp" />
+    <ClCompile Include="..\RedEdr\analyzer.cpp" />
     <ClCompile Include="..\RedEdr\config.cpp" />
     <ClCompile Include="..\RedEdr\event_producer.cpp" />
-    <ClCompile Include="..\RedEdr\procinfo.cpp" />
-    <ClCompile Include="..\RedEdr\utils.cpp" />
+    <ClCompile Include="..\RedEdr\processcache.cpp" />
+    <ClCompile Include="..\RedEdr\processinfo.cpp" />
     <ClCompile Include="UnitTestAnalyzer.cpp" />
     <ClCompile Include="UnitTestCache.cpp" />
     <ClCompile Include="UnitTestOutput.cpp" />
